@@ -103,6 +103,7 @@ exportMethods(addNotContaminantQC)
 exportMethods(addPerSampleDominantFeatures)
 exportMethods(addPerSampleDominantTaxa)
 exportMethods(addTaxonomyTree)
+exportMethods(addTree)
 exportMethods(agglomerateByPrevalence)
 exportMethods(agglomerateByRank)
 exportMethods(bestDMNFit)
@@ -130,6 +131,7 @@ exportMethods(getBestDMNFit)
 exportMethods(getDMN)
 exportMethods(getExperimentCrossAssociation)
 exportMethods(getExperimentCrossCorrelation)
+exportMethods(getHierarchyTree)
 exportMethods(getPrevalence)
 exportMethods(getPrevalentAbundance)
 exportMethods(getPrevalentFeatures)
