@@ -1,0 +1,28 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/deprecate.R
+\name{deprecate}
+\alias{deprecate}
+\alias{addTaxonomyTree}
+\alias{addTaxonomyTree,SummarizedExperiment-method}
+\alias{taxonomyTree}
+\alias{taxonomyTree,SummarizedExperiment-method}
+\title{These functions will be deprecated. Please use other functions instead.}
+\usage{
+addTaxonomyTree(x, ...)
+
+\S4method{addTaxonomyTree}{SummarizedExperiment}(x)
+
+taxonomyTree(x, ...)
+
+\S4method{taxonomyTree}{SummarizedExperiment}(x)
+}
+\arguments{
+\item{x}{a \code{\link{SummarizedExperiment}} object -}
+
+\item{...}{\itemize{
+\item 
+}}
+}
+\description{
+These functions will be deprecated. Please use other functions instead.
+}
